# bls_cuda

./: .gitignore  3288.01.h5  API.md  Changes.md  README.md  backup_code.ipynb  benchmark_precision.py  bls_cpu.ipynb  bls_cuda_v2_run.py  injection_recovery_results.csv  injection_recovery_summary.csv  modify_notebook.py  pyfit5_example.ipynb  pyproject.toml  pytfit5_example.ipynb  run_benchmark.py  transitPy5.py  transit_fit_ex.ipynb  transitfind5_cpu.py  transitfit.py
cudaFiles/: bls_cuda_v2.ipynb  bls_cuda_v2.py  bls_cuda_v2_f32.py
pytfit5/: __init__.py  bls_cpu.py  keplerian.py  occult.py  period_validation.py  synthetic.py  transitPy5.py  transitfit.py  transitmcmc.py  transitmodel.py  transitplot.py
utils_python/: transitfit.py  transitmcmc.py  transitplot.py
