[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytfit5"
version = "1.0.0"
authors = [
  { name="Jason Rowe", email="jason@example.com" },
]
description = "An implementation of TransitFit5 with Python."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "numba",
    "scipy",
    "pandas",
    "astroquery",
]

[project.urls]
"Homepage" = "https://github.com/jasonfrowe/bls_cuda"
"Bug Tracker" = "https://github.com/jasonfrowe/bls_cuda/issues"

# This section tells setuptools where to find your code
[tool.setuptools.packages.find]
where = ["pytfit5"]